Fix text overflowing in smartphones and fix minor spelling mistakes.

--- a/main.css
+++ b/main.css
@@ -88,6 +88,10 @@ dt {
     width: 30%;
 }
 
+#contact {
+    font-size: min(3vw, 20px);
+}
+
 #interests {
     width: 70%;
 }
